--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,10 @@ ExportedObj/
 *.pdb.meta
 *.mdb.meta
 
+# meta files for scripts
+*.meta
+.DS_Store
+
 # Unity3D generated file on crash reports
 sysinfo.txt
 
